feat(appkit): activate memory pressure contracts